--- a/app/sass/base/_var.scss
+++ b/app/sass/base/_var.scss
@@ -3,7 +3,14 @@ $max-width: 1300px;
 
 $main-font: "Roboto", "Arial", sans-serif;
 
+$interface-border-radius: 5px;
+
 //colours
 $mint: #849d8f;
 $grey: #3f3f3f;
 $light-grey: #f8f7f4;
+$interface-color: #323232;
+$red: #de4133;
+$dark-red: rgba(127,22,16,.9);
+$red-gradient-light: #f97d52;
+$red-gradient-dark: #de4133;
