--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -2,5 +2,8 @@
 
 @import 'base/base';
 @import 'base/var';
+@import 'base/mixins';
 
 @import 'components/header';
+@import 'components/login-form';
+@import 'components/btn';
