--- a/app/sass/components/_header.scss
+++ b/app/sass/components/_header.scss
@@ -53,6 +53,10 @@
             position: relative;
             padding-bottom: .8rem;
 
+            &:hover .dropdown__content {
+                display: block;
+            }
+
             &__content {
                 display: none;
                 position: absolute;
@@ -60,7 +64,7 @@
                 left: 0;
                 background-color: $light-grey;
                 min-width: 14.5rem;
-                box-shadow: 0px 10px 16px 0px rgba(0,0,0,0.2);
+                box-shadow: 0 20px 20px 0 rgba(0,0,0,.4);
                 z-index: 1;
                 border-radius: 6px;
             }
@@ -102,13 +106,121 @@
                 }
             }
         }
+
+        &__icon {
+            fill: #fff;
+        }
     
         &__user-list {
             display: flex;
+            margin-left: auto;
+            align-items: center;
+        }
+
+        &__user-item {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding-bottom: .8rem;
+
+            &:not(:last-child) {
+                margin-right: 1rem;
+            }
+
+            &--search {
+                position: relative;
+
+                &:hover .search {
+                    display: block;
+                }
+            }
+
+            &--login {
+                position: relative;
+
+                &:hover .login {
+                    display: block;
+                }
+            }
+        }
+
+        &__user-link {
+            font-family: $main-font;
+            font-size: 1.4rem;
+            font-weight: 500;
+            line-height: 1.14;
+            color: #fff;
+            background-color: rgba(255, 255, 255, .2);
+            border-radius: 2rem;
+            text-decoration: none;
+            padding: .6rem 1.5rem;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            &--magnify {
+                padding: .6rem;
+                border-radius: 50%;
+            }
+
+            &:hover {
+                background-color: $light-grey;
+                color: $grey;
+            }
+
+            &:hover .nav__icon, &:focus .nav__icon, &:active .nav__icon {
+                fill: $grey;
+            }
         }
     }
 }
 
-.dropdown:hover .dropdown__content {
-    display: block;
+.search {
+    @include popup-style;
+    display: none;
+    position: absolute;
+    top: 4rem;
+    right: 0;
+    z-index: 5;
+    min-width: 34.5rem;
+    box-shadow: 0 20px 20px 0 rgba(0,0,0,.4);
+}
+
+.text-input {
+    position: relative;
+    display: flex;
+    align-items: center;
+
+    &__field {
+        padding: .9rem 1.5rem;
+        border: 1px solid #d3d3d2;
+        border-radius: .5rem;
+        font-size: 1.4rem;
+        line-height: 1.7;
+        font-weight: 700;
+        color: #999;
+        transition: box-shadow 230ms;
+        width: 30.8rem;
+
+        &:hover {
+            border-color: #c7c6c5;
+            box-shadow: inset 0 0 0 1px #c7c6c5;
+        }
+
+        &--login {
+            width: 24rem;
+            margin-bottom: 2rem;
+        }
+    }
+
+    &__label {
+        position: absolute;
+        top: 1rem;
+        left: 1rem;
+        font-family: $main-font;
+        font-size: 1.4rem;
+        line-height: 1.7;
+        font-weight: 400;
+        color: #999;
+    }
 }
