--- a/app/sass/base/_base.scss
+++ b/app/sass/base/_base.scss
@@ -54,10 +54,19 @@ body {
     width: auto;
     max-width: 130rem;
     position: relative;
-    margin: 0 2.7rem;
+    padding: 0 2.7rem;
+    margin: 0 auto;
 }
 
 img {
     max-width: 100%;
     height: auto;
+}
+
+.visually-hidden {
+    position: absolute; 
+    overflow: hidden; 
+    clip: rect(0 0 0 0); 
+    height: 1px; width: 1px; 
+    margin: -1px; padding: 0; border: 0; 
 }
