--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -3,7 +3,9 @@
 @import 'base/base';
 @import 'base/var';
 @import 'base/mixins';
+@import 'base/animations';
 
 @import 'components/header';
 @import 'components/login-form';
 @import 'components/btn';
+@import 'components/slider';
