--- a/app/sass/components/_btn.scss
+++ b/app/sass/components/_btn.scss
@@ -9,10 +9,27 @@
     position: relative;
     padding: 1rem 2.2rem;
     background: $red linear-gradient(to bottom, $red-gradient-light, $red-gradient-dark);
-    font-size: 18px;
-    line-height: 24px;
+    font-size: 1.8rem;
+    line-height: 1.3;
     color: #fff;
     box-shadow: 0 2px 4px 0 $dark-red;
     transition: box-shadow 230ms;
     z-index: 1;
+
+    &:hover {
+        background: #fff linear-gradient(to bottom, #e74a35, #f26843);
+    }
+
+    &:focus, &:active {
+        outline: none;
+        background: $red linear-gradient(to bottom, #e74a35, #f26843);
+        box-shadow: inset 0 2px 4px 0 $dark-red;
+    }
+
+    &--large {
+        max-width: 40rem;
+        overflow: hidden;
+        font-size: 3.2rem;
+        padding: 1rem 4rem;
+    }
 }
