--- a/app/sass/components/_btn.scss
+++ b/app/sass/components/_btn.scss
@@ -15,6 +15,7 @@
     box-shadow: 0 2px 4px 0 $dark-red;
     transition: box-shadow 230ms;
     z-index: 1;
+    transition: background 850ms ease-in-out;
 
     &:hover {
         background: #fff linear-gradient(to bottom, #e74a35, #f26843);
