--- a/app/sass/base/_animations.scss
+++ b/app/sass/base/_animations.scss
@@ -13,3 +13,19 @@
       transform: translateX(0);
     }
 }
+
+@keyframes bouncy-slide-down {
+  0% {
+    transform: translateY(-15px);
+    opacity: 0;
+  }
+
+  50% {
+    transform: translateY(5px) scaleY(1.05);
+    opacity: 1;
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
