--- a/app/sass/components/_slider.scss
+++ b/app/sass/components/_slider.scss
@@ -4,7 +4,7 @@
     margin-bottom: 4rem;
 
     &__glow {
-        z-index: -1;
+        z-index: -3;
         position: absolute;
         width: 90%;
         height: 150%;
@@ -25,12 +25,14 @@
         &--closer {
             left: 40px;
             top: -4rem;
-            z-index: 1;
+            height: 58.4rem;
+            z-index: -1;
         }
 
         &--farther {
             left: -10px;
             top: -3rem;
+            z-index: -2;
         }
     }
 
@@ -73,13 +75,17 @@
         cursor: pointer;
         transition: background-color $fast-transition;
 
-        &--current {
-            background-color: white;
-        }
-
-        &:not(.slider__toggle--current):hover,
-        &:not(.slider__toggle--current):focus {
+        &:not(.active):hover,
+        &:not(.active):focus {
             background-color: rgba(white, 0.3);
         }
     }
+}
+
+.active {
+    background-color: white;
+}
+
+.slider-slide {
+    animation: slider-slide 850ms ease-in-out;
 }
