Card Section Pt.1

--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -9,4 +9,6 @@
 @import 'components/login-form';
 @import 'components/btn';
 @import 'components/slider';
+@import 'components/specials';
+@import 'components/card';
 
