--- a/app/sass/components/_slider.scss
+++ b/app/sass/components/_slider.scss
@@ -17,6 +17,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        position: relative;
     }
 
     &__image {
@@ -62,6 +63,7 @@
         position: absolute;
         bottom: 25px;
         left: 0;
+        z-index: 10;
     }
 
     &__toggle {
