--- a/app/sass/components/_slider.scss
+++ b/app/sass/components/_slider.scss
@@ -45,6 +45,7 @@
         text-align: center;
         font-weight: 700;
         margin: 0 28rem 3rem;
+        max-width: 70rem;
     }
 
     &__item, &__content {
