--- a/app/sass/base/_animations.scss
+++ b/app/sass/base/_animations.scss
@@ -29,3 +29,19 @@
     transform: translateY(0);
   }
 }
+
+@keyframes slide-down {
+  0% {
+    transform: translateY(-35px);
+    opacity: 0;
+  }
+
+  40% {
+    opacity: 0.6;
+  }
+
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
