--- a/app/sass/base/_var.scss
+++ b/app/sass/base/_var.scss
@@ -20,6 +20,7 @@ $red-gradient-light: #f97d52;
 $red-gradient-dark: #de4133;
 $link-hover: #ffbc9e;
 $link-active: #e84d37;
+$font-main-color: #fff;
 
 $page-bg-mint-color: $mint;
 $page-bg-blue-color: $blue;
