--- a/app/sass/base/_mixins.scss
+++ b/app/sass/base/_mixins.scss
@@ -5,3 +5,17 @@
     color: $interface-color;
     box-shadow: 0 20px 20px 0 rgba(0,0,0,.4);
   }
+
+  @mixin custom-link-style($color, $link-hover) {
+    font-family: $main-font;
+    color: $color;
+    text-decoration: none;
+    box-shadow: 0 1px 0 0 rgba($color, 0.2);
+    transition: color .3s ease-in-out;
+  
+    &:hover,
+    &:focus {
+      color: $link-hover;
+      box-shadow: 0 1px 0 0 rgba($link-hover, 0.2);
+    }
+  }
