--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -5,6 +5,8 @@
 @import 'base/mixins';
 @import 'base/animations';
 
+@import 'vendors/libs';
+
 @import 'components/header';
 @import 'components/login-form';
 @import 'components/btn';
@@ -14,4 +16,6 @@
 @import 'components/aboutus';
 @import 'components/news';
 @import 'components/map';
+@import 'components/footer';
+@import 'components/overlay';
 
