--- a/app/sass/components/_card.scss
+++ b/app/sass/components/_card.scss
@@ -63,6 +63,7 @@
         text-align: center;
         text-decoration: none;
         transition: all 230ms ease-in-out;
+        max-width: 30rem;
 
         & span {
             box-shadow: 0 1px 0 0 rgba(255,255,255,.2);
