--- a/app/sass/base/_base.scss
+++ b/app/sass/base/_base.scss
@@ -31,6 +31,24 @@
     font-display: swap;
 }
 
+@mixin respond ($breakpoint) {
+    @if $breakpoint == phone {
+        @media only screen and (max-width: 37.5em) { @content };
+    }
+
+    @if $breakpoint == tab-land {
+        @media only screen and  (max-width: 75em) { @content };
+    }
+
+    @if $breakpoint == tab-port {
+        @media only screen and  (max-width: 56.25em) { @content };
+    }
+
+    @if $breakpoint == big-desktop {
+        @media only screen and  (min-width: 112.5em) { @content };
+    }
+}
+
 *, 
 *::before,
 *::after {
@@ -42,6 +60,18 @@
 html {
     box-sizing: border-box;
     font-size: 62.5%;  
+
+    @include respond(tab-land) {
+        font-size: 56.25%;
+    }
+
+    @include respond(tab-port) {
+        font-size: 50%;
+    }
+
+    @include respond(big-desktop) {
+        font-size: 75%;
+    }
 }
 
 body {
