--- a/app/sass/base/_mixins.scss
+++ b/app/sass/base/_mixins.scss
@@ -19,3 +19,21 @@
       box-shadow: 0 1px 0 0 rgba($link-hover, 0.2);
     }
   }
+
+  @mixin respond ($breakpoint) {
+    @if $breakpoint == phone {
+        @media only screen and (max-width: 37.5em) { @content };
+    }
+
+    @if $breakpoint == tab-land {
+        @media only screen and  (max-width: 75em) { @content };
+    }
+
+    @if $breakpoint == tab-port {
+        @media only screen and  (max-width: 56.25em) { @content };
+    }
+
+    @if $breakpoint == big-desktop {
+        @media only screen and  (min-width: 112.5em) { @content };
+    }
+}
