--- a/app/sass/components/_aboutus.scss
+++ b/app/sass/components/_aboutus.scss
@@ -20,6 +20,10 @@
         &:not(:nth-child(n+3)) {
             margin-bottom: 3rem;
         }
+
+        @include respond(phone) {
+            width: 100%;
+        }
     }
 
     &__heading {
