--- a/app/sass/components/_news.scss
+++ b/app/sass/components/_news.scss
@@ -3,10 +3,15 @@
         list-style: none;
         display: flex;
         justify-content: space-between;
+
+        @include respond(tab-port) {
+           flex-direction: column;
+        }
     }
 
     &__item {
         display: flex;
+        flex-wrap: wrap;
         flex-direction: column;
         margin-bottom: 4rem;
         padding: 1.5rem 2rem 2.5rem;
@@ -28,6 +33,10 @@
             padding: 5px;
             background: $blue url("../img/decorative/post.jpg") no-repeat top;
             background-size: cover;
+        }
+
+        @include respond(tab-port) {
+            width: 100%;
         }
     }
 
