--- a/app/sass/components/_overlay.scss
+++ b/app/sass/components/_overlay.scss
@@ -10,6 +10,10 @@
   position: relative;
   margin: 0 auto;
 
+  @include respond(phone) {
+    width: 100%;
+  }
+
   &__heading {
     font-family: $main-font;
     margin: 0;
